@@ -1,4 +1,4 @@
-.TH "src/ho_font.h" 3 "4 Jun 2008" "Version 0.10.10" "libhocr" \" -*- nroff -*-
+.TH "src/ho_font.h" 3 "23 Jun 2008" "Version 0.10.10" "libhocr" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
